--- a/login/7/attal_benjamin_lin_michele/login2/templates/change.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/change.html
@@ -1,24 +1,27 @@
 <html>
-<head>
-  <script type="text/javascript">
-    {% if message %}
-      function notify() {
-        alert("{{message}}");
-      };
-      window.onload = notify;
-    {% endif %}
-  </script>
-  <title>Change Password</title>
-</head>
-<h2>Change Password</h2>
-<form method=POST>
-  Old Password:
-  <input type=password name=oldpass><br>
-  New Password:
-  <input type=password name=newpass><br>
-  Confirm:
-  <input type=password name=cpass><br>
-  <input type=submit>
-</form>
-<a href="/">Home</a>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
+        <script type="text/javascript">
+            {% if message %}
+                function notify() {
+                    alert("{{message}}");
+                };
+                window.onload = notify;
+            {% endif %}
+        </script>
+        <title>Change Password</title>
+    </head>
+    <body>
+        <h2>Change Password</h2>
+        <a href="/">Home</a>
+        <form method=POST>
+            <div class=description>Old Password:</div>
+            <input type=password name=oldpass><br>
+            <div class=description>New Password:</div>
+            <input type=password name=newpass><br>
+            <div class=description>Confirm:</div>
+            <input type=password name=cpass>
+            <input type=submit>
+        </form>
+    </body>
 </html>
