--- a/login/7/attal_benjamin_lin_michele/login2/templates/home.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/home.html
@@ -1,6 +1,12 @@
-<title>Home Page</title>
-<h2>Welcome home</h2>
-
-<a href="/logout">Logout</a><br>
-<a href="/something">Mystery Page</a><br>
-<a href="/change">Change your password</a><br>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
+    </head>
+    <body>
+        <title>Home Page</title>
+        <h2>Welcome home</h2>
+        <a href="/logout">Logout</a>
+        <a href="/something">Mystery Page</a>
+        <a href="/change">Change your password</a>
+    </body>
+</html>
