--- a/login/7/Khan_Sabrina_Chin_Joshua/templates/Register.html
+++ b/login/7/Khan_Sabrina_Chin_Joshua/templates/Register.html
@@ -1,6 +1,6 @@
 <h1>Looks like you have to register.</h1>
 
-<form method = POST> 
+<form method ="POST"> 
 
 Username:<p> <input type="text" name ="Username"> 
 
