--- a/login/7/Khan_Sabrina_Chin_Joshua/templates/Login.html
+++ b/login/7/Khan_Sabrina_Chin_Joshua/templates/Login.html
@@ -19,7 +19,11 @@ Password: <p> <input type = "text" name = "Password">
 
 <h2>Don't have an account? Register!</h2>
 
+<a href="/Register">Register</a>
+
+<h2>Have an account, but realize your password is stupid? Change it!</h2> 
+
+
+<a href="/ChangePassword">Change Password</a>
 
 </form>
-
-<a href="/Register">Register</a>
